--- a/initial_setup.yaml
+++ b/initial_setup.yaml
@@ -1,28 +1,36 @@
-# Number of worker nodes in addition to master node
-NodeCount: 1
+###################################################
+#/// Define cluster configuration in this file ///#
+###################################################
+
+# How many worker nodes to deploy in addition to the master node
+NodeCount: 3
+
 
 master:
-  # Set amount of RAM memory,CPU cores and IP address for master node
+  #####################################################################
+  # Set amount of RAM memory,CPU cores and IP address for master node #
+  #####################################################################
   memory: 8096
   cpus: 4
   master_ip: "192.168.10.100"
+  master_virt: True   # enable nested virtualization on the master node
 
-  # set the internal kubernetes pod network CIDR
+  ####################################################
+  ### set the internal kubernetes pod network CIDR ###
+  ####################################################
   pod_network_cidr: "10.244.0.0/16"
 
-  # enable nested virtualization on the master machine
-  master_virt: True
 
 worker:
-  # Set amount of RAM memory and CPU cores for each worker node
+  ###############################################################
+  # Set amount of RAM memory and CPU cores for each worker node #
+  ###############################################################
   memory: 6096
   cpus: 2
+  worker_virt: True      # Enable nested virtualization on worker nodes
 
-  # enable nested virtualization on worker node machines
-  worker_virt: True
-
-  # Define ip range for worker nodes
-  ip_prefix: "192.168.10."         #
-  start_index: 2                   #
-  count: <%= @NodeCount %>         #
- # # # # # # # # # # # # # # # # # #
+ #  Define ip range for worker nodes #
+  ip_prefix: "192.168.10."           #
+  start_index: 2                     #
+  count: <%= @NodeCount %>           #
+ # # # # # # # # # # # # # # # # # # #
