--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ master:
   #######################################################################
   #                       set the internal Kubernetes pod Network plugin and  CIDR                       #
   #######################################################################
-  pod_network_plugin: Flannel              # Choose between Weave, Flannel or Cilium. Write without quotes.
+  pod_network_plugin: Cilium              # Choose between Weave, Flannel or Cilium. Write without quotes.
   pod_network_cidr: "10.244.0.0/16"     # This is the default Flannel CIDR. Works fine also with the rest.
 
 
